--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,11 +13,13 @@
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
 
-    <string name="auth_title">Вход в приложение</string>
+    <string name="auth_title">Добро пожаловать</string>
     <string name="email_hint">Email</string>
     <string name="password_hint">Пароль</string>
     <string name="login_button">Войти</string>
     <string name="register_button">Зарегистрироваться</string>
     <string name="forgot_password">Забыли пароль?</string>
     <string name="or_continue_with">Или продолжить с помощью</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
