--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
     <string name="register_button">Зарегистрироваться</string>
     <string name="forgot_password">Забыли пароль?</string>
     <string name="or_continue_with">Или продолжить с помощью</string>
-    <!-- TODO: Remove or change this placeholder text -->
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="open_maps"><u>Открыть карты</u></string>
 </resources>
